; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_queue_committed.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_queue_committed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_wc_queue_committed(i32** %0, i8* %1, i32* %2, i32 %3, i32* %4, i32 %5, i32 %6, i8* %7, i32* %8) #0 {
  %10 = alloca i32**, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  store i32** %0, i32*** %10, align 8
  store i8* %1, i8** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32* %4, i32** %14, align 8
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i8* %7, i8** %17, align 8
  store i32* %8, i32** %18, align 8
  %20 = load i8*, i8** %17, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %22, label %28

22:                                               ; preds = %9
  %23 = load i8*, i8** %17, align 8
  %24 = load i32**, i32*** %10, align 8
  %25 = load i32*, i32** %24, align 8
  %26 = call i32 @svn_wc__get_committed_queue_pool(i32* %25)
  %27 = call i32* @svn_checksum__from_digest_md5(i8* %23, i32 %26)
  store i32* %27, i32** %19, align 8
  br label %29

28:                                               ; preds = %9
  store i32* null, i32** %19, align 8
  br label %29

29:                                               ; preds = %28, %22
  %30 = load i32**, i32*** %10, align 8
  %31 = load i32*, i32** %30, align 8
  %32 = load i8*, i8** %11, align 8
  %33 = load i32*, i32** %12, align 8
  %34 = load i32, i32* %13, align 4
  %35 = load i32*, i32** %14, align 8
  %36 = load i32, i32* %15, align 4
  %37 = load i32, i32* %16, align 4
  %38 = load i32*, i32** %19, align 8
  %39 = load i32*, i32** %18, align 8
  %40 = call i32* @svn_wc_queue_committed2(i32* %31, i8* %32, i32* %33, i32 %34, i32* %35, i32 %36, i32 %37, i32* %38, i32* %39)
  ret i32* %40
}

declare dso_local i32* @svn_checksum__from_digest_md5(i8*, i32) #1

declare dso_local i32 @svn_wc__get_committed_queue_pool(i32*) #1

declare dso_local i32* @svn_wc_queue_committed2(i32*, i8*, i32*, i32, i32*, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
